syntax = "proto3";

package grpc;

option go_package = "github.com/kviatkovsky/User-Management-gRPC/user";

service UserService {
  rpc GetUsers (GetUsersRequest) returns (GetUsersResponse) {}
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
}

message UserResponse {
  string id = 1;
  string email = 2;
}

message GetUsersRequest {}

message GetUsersResponse {
  repeated UserResponse users = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string password = 3;
}

message UpdateUserResponse {
  UserResponse user = 1;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  UserResponse user = 1;
}

message GetUserByIDRequest {
  string id = 1;
}

message GetUserByIDResponse {
  UserResponse user = 1;
}
